Cell Divider: Null Heights to Prevent Unexpected Alignment in Safari

--- a/css/admin.less
+++ b/css/admin.less
@@ -635,7 +635,9 @@
 							content: '\205E';
 							font-family: Verdana;
 							font-size: 20px;
+							height: 0;
 							left: 2px;
+							line-height: 0;
 							position: absolute;
 							top: 50%;
 							transform: translateY(-50%);
